--- a/api/.env.example
+++ b/api/.env.example
@@ -1,5 +1,4 @@
-
-BASE_URL="http://localhost:3000/"
+BASE_URL="http://localhost:3000"
 SITE_URL="http://localhost:4200"
 PORT=3000
-MongoConnection="mongodb://localhost:27017/faktury?readPreference=primary" 
+MONGO="mongodb+srv://FarukhJavaid:Faktury12321@cluster0.lwey8.mongodb.net/faktury"
