--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0",
     "@popperjs/core": "^2.10.2",
+    "@stripe/stripe-js": "^1.24.0",
+    "@sweetalert2/ngx-sweetalert2": "^11.0.0",
     "@types/aos": "^3.0.4",
+    "angular-confirmation-popover": "^6.0.0",
     "angular-font-awesome": "^3.1.2",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~7.4.0",
+    "sweetalert2": "^11.4.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
