--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "ngx-toastr": "^14.2.1",
+    "nodemon": "^2.0.15",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
