--- a/api/package.json
+++ b/api/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/TheRightSoftware/faktury#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mongoose": "^6.2.4",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "stripe": "^8.207.0"
