--- a/api/package.json
+++ b/api/package.json
@@ -18,13 +18,18 @@
   },
   "homepage": "https://github.com/TheRightSoftware/faktury#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mongoose": "^6.2.4",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "path": "^0.12.7",
     "stripe": "^8.207.0"
   }
 }
