--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "path": "^0.12.7",
     "stripe": "^8.207.0"
   }
 }
