--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0",
     "@popperjs/core": "^2.10.2",
-    "@stripe/stripe-js": "^1.24.0",
+    "@stripe/stripe-js": "^1.25.0",
     "@sweetalert2/ngx-sweetalert2": "^11.0.0",
     "@types/aos": "^3.0.4",
     "angular-confirmation-popover": "^6.0.0",
@@ -35,6 +35,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^8.0.0",
     "ngx-toastr": "^14.2.1",
     "nodemon": "^2.0.15",
     "rxjs": "~7.4.0",
