--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "@types/aos": "^3.0.4",
     "angular-confirmation-popover": "^6.0.0",
     "angular-font-awesome": "^3.1.2",
+    "angular-moment-timezone": "^1.7.1",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "ngx-bootstrap": "^8.0.0",
     "ngx-toastr": "^14.2.1",
     "nodemon": "^2.0.15",
