--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "ngx-bootstrap": "^8.0.0",
@@ -51,6 +52,7 @@
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
+    "@types/lodash": "^4.14.180",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
